--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "jsonwebtoken": "8.5.1",
+    "mongoose": "5.11.11"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
