--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
-    "jsonwebtoken": "8.5.1",
-    "mongoose": "5.11.11"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
+    "mongo-cursor-pagination": "^7.3.1",
+    "mongoose": "5.11.11",
+    "mongoose-url-slugs": "^1.0.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
+    "qs": "^6.9.6"
   },
   "devDependencies": {
+    "eslint": "^7.17.0",
     "nodemon": "1.18.4"
   },
   "keywords": []
